# scalingfake

./: .gitignore  go.mod  go.sum  pyproject.toml
client/: azure.go  background.go  go.mod  go.sum  main.go  require.txt  rtmp.go  security.go  tui.go  utils.go  webrtc.go
client/test/: test_server.go
data/: README.md
server/: Dockerfile  build.bat  docker.sh  main.go  phase1.sh  phase2.sh  setup.sh  webrtc.go
server/grubmod/: setup.py
server/grubmod/grubmod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
shared/config/: config.go
shared/security/: security.go
shared/utils/: utils.go
shared/webrtc/: webrtc.go
