[project]
name = "scalingfake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.10"
dependencies = [
    "h5py>=3.11.0",
    "numexpr>=2.8.6",
    "numpy==1.21.6",
    "onnx==1.14.0",
    "onnxruntime-gpu==1.15.1",
    "opencv-contrib-python==4.8.0.74",
    "opencv-python==4.8.0.74",
    "protobuf==3.20.2",
    "pyqt6>=6.7.1",
    "torch==1.13.1",
    "torchvision==0.14.1",
]
